--- a/website_school_management/views/programmes.xml
+++ b/website_school_management/views/programmes.xml
@@ -33,6 +33,11 @@
                                 </t>
                             </div>
                             <hr class="my-0" />
+                            <p
+                            >Il existe également des programmes sur-mesure qui ne sont pas repris dans la liste ci-dessous. Vous pouvez les retrouvez <a
+                                    href="/programmes-"
+                                >ici</a>.</p>
+
                         </div>
                     </div>
                     <div class="col-12">
@@ -570,27 +575,56 @@
             </t>
         </dl>
         <div class="accordion" id="course_detail">
-            <t t-if="not (course_doc.schedule_text and course_doc.content and course_doc.method and course_doc.learning_outcomes and course_doc.references and course_doc.pre_co_requiered and course_doc.evaluation_method )">
+            <t
+                t-if="not (course_doc.schedule_text and course_doc.content and course_doc.method and course_doc.learning_outcomes and course_doc.references and course_doc.pre_co_requiered and course_doc.evaluation_method )"
+            >
                 <div id="form_request_course_details">
-                    <p>La description de ce cours n'est pas disponible. Vous pouvez contacter le responsable pour lui demander de l'encoder.</p>
+                    <p
+                    >La description de ce cours n'est pas disponible. Vous pouvez contacter le responsable pour lui demander de l'encoder.</p>
                     <form>
                     <div class="row">
                         <div class="col-12 col-lg-4 mt-2">
                             <label for="request_first_name">Prénom :</label>
-                            <input id="request_first_name" type="text" class="form-control" name="first_name" required="true" />    
+                            <input
+                                    id="request_first_name"
+                                    type="text"
+                                    class="form-control"
+                                    name="first_name"
+                                    required="true"
+                                />
                         </div>
                         <div class="col-12 col-lg-4 mt-2">
                             <label for="request_last_name">Nom :</label>
-                            <input id="request_last_name" type="text" class="form-control" name="last_name" required="true" />    
+                            <input
+                                    id="request_last_name"
+                                    type="text"
+                                    class="form-control"
+                                    name="last_name"
+                                    required="true"
+                                />
                         </div>
                         <div class="col-12 col-lg-4 mt-2">
                             <label for="request_email">Email :</label>
-                            <input id="request_email" type="email" class="form-control" name="email" required="true" />
+                            <input
+                                    id="request_email"
+                                    type="email"
+                                    class="form-control"
+                                    name="email"
+                                    required="true"
+                                />
                         </div>
                         <div class="col-12">
-                            <input id="request_course_id" type="hidden" t-att-value="course.id" />
-                            <button id="btn_request_course_details" type="submit" class="btn btn-primary mt-3">Demander</button>
-                            <p class="mt-3 error_request_course_details"></p>
+                            <input
+                                    id="request_course_id"
+                                    type="hidden"
+                                    t-att-value="course.id"
+                                />
+                            <button
+                                    id="btn_request_course_details"
+                                    type="submit"
+                                    class="btn btn-primary mt-3"
+                                >Demander</button>
+                            <p class="mt-3 error_request_course_details" />
                         </div>
                     </div>
                     </form>
@@ -928,10 +962,15 @@
 
     <template id="cours_details_request">
         <p>Bonjour,</p>
-        <p><t t-esc="first_name + ' ' + last_name" /> vous a envoyé une demande afin d'obtenir les informations concernant le cours <b><t t-esc="course.name" /></b>.</p>
-        <p>Vous pouvez recontacter cette personne via <a t-att-href="'mailto:%s' %email">son adresse email</a>.</p>
+        <p><t
+                t-esc="first_name + ' ' + last_name"
+            /> vous a envoyé une demande afin d'obtenir les informations concernant le cours <b
+            ><t t-esc="course.name" /></b>.</p>
+        <p>Vous pouvez recontacter cette personne via <a
+                t-att-href="'mailto:%s' %email"
+            >son adresse email</a>.</p>
         <p>La fiche du cours est disponible à <a t-att-href="url">cette adresse</a>.</p>
-        <hr/>
+        <hr />
         <p>Cet email a été envoyé automatiquement.</p>
     </template>
 
