First modifications on reports

--- a/school_management/report/report_program.xml
+++ b/school_management/report/report_program.xml
@@ -348,7 +348,7 @@
                     style="margin: 0cm 1.5cm;"
                 >
                     <h2><t t-esc="bloc.name" /></h2>
-                    <h4>Basé sur <t t-esc="bloc.source_bloc_id.name" /></h4>
+                    <h4><t t-esc="bloc.source_bloc_id.name" /></h4>
                     <h5><t t-esc="bloc.uid" /></h5>
                     <table class="pure-table pure-table-horizontal horizon-table">
                       <colgroup>
@@ -450,33 +450,29 @@
                           <p>Avis de la commission des études</p>
                           <p>
                               Programme annuel approuvé par la commission des études (séance(s) :
-                              <t t-foreach="bloc.approuval_ids" t-as="app">
-                                  <t t-esc="app.date.strftime('%d-%m-%Y')" />
+                              <!-- <t t-foreach="bloc.approuval_ids" t-as="app">
+                                  <t t-esc="app.date.strftime('%d-%m-%Y')"/>
                                   <t t-if="not app_first and not app_last">
                                       ,
                                   </t>
-                              </t>)
+                              </t> --> )
                           </p>
                         </td>
                       </tr>
                       <tr>
                         <td>
                           <p>
-                              Signature de la présidente de la commission des études
+                              Signature de la/du président(e) de la commission des études
                           </p>
-                          <img
-                                    style="height:70px;width:210px;"
-                                    t-att-src="image_data_uri(company.director_signature)"
-                                />
+                          <div style="height:70px;width:210px;" />
+                          <!--<img style="height:70px;width:210px;" t-att-src="image_data_uri(company.director_signature)"/>-->
                         </td>
                         <td>
                           <p>
-                             Signature du secrétaire de la commission des études
+                             Signature de la/du secrétaire de la commission des études
                           </p>
-                          <img
-                                    style="height:70px;width:210px;"
-                                    t-att-src="image_data_uri(company.secretary_signature)"
-                                />
+                          <div style="height:70px;width:210px;" />
+                          <!--<img style="height:70px;width:210px;" t-att-src="image_data_uri(company.secretary_signature)"/>-->
                         </td>
                       </tr>
                     </table>
@@ -501,7 +497,8 @@
 
     <template id="report_attendance_for_student_content">
         <t t-call="web.html_container">
-            <t t-set="data_report_margin_top" t-value="30" />
+            <t t-set="data_report_margin_top" t-value="40" />
+            <t t-set="data_report_header_spacing" t-value="35" />
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.external_layout">
                     <div class="page" style="padding-left: 50px;padding-right: 50px;">
@@ -513,69 +510,78 @@
                                 /></h2>
                         </section>
                         <hr />
-                        <section class="col-10 col-offset-1" style="margin-top:80px;">
+                        <div style="font-size:20px;">
+                          <section
+                                class="col-10 col-offset-1"
+                                style="margin-top:180px;"
+                            >
                                 Je soussigné, Nathanaël HARCQ, Directeur du CONSERVATOIRE ROYAL DE LIEGE certifie par la présente que
-                        </section>
-                        <section style="margin-top:40px;">
-                            <div class="col-9 col-offset-2">
-                                <b><span t-field="o.student_id.name" />, né<t
+                          </section>
+                          <section style="margin-top:40px;">
+                              <div class="col-9 col-offset-2">
+                                  <b><span t-field="o.student_id.name" />, né<t
+                                            t-if="o.student_id.gender == 'female'"
+                                        >e</t> le <span
+                                            t-field="o.student_id.birthdate_date"
+                                        /> à <span
+                                            t-field="o.student_id.birthplace"
+                                        /></b>
+                              </div>
+                          </section>
+                          <section style="margin-top:40px;">
+                              <div class="col-10 col-offset-1">
+                                  est régulièrement inscrit<t
                                         t-if="o.student_id.gender == 'female'"
-                                    >e</t> le <span
-                                        t-field="o.student_id.birthdate_date"
-                                    /> à <span t-field="o.student_id.birthplace" /></b>
-                            </div>
-                        </section>
-                        <section style="margin-top:40px;">
-                            <div class="col-10 col-offset-1">
-                                est régulièrement inscrit<t
-                                    t-if="o.student_id.gender == 'female'"
-                                >e</t> aux cours du jour de l'Enseignement Supérieur Artistique de type
-                                <span
-                                    t-field="o.source_bloc_cycle_id.type"
-                                /> pour l'année <span t-field="o.year_id" />.
-                                <p style="margin-top:10px;">
-                                    Les cours sont donnés du 15 septembre au 30 juin.
-                                </p>
-                            </div>
-                        </section>
-                        <section style="margin-top:20px;">
-                            <div class="col-10 col-offset-1">
-                                <u>Cours suivis dans la nouvelle structure:</u>
-                            </div>
-                        </section>
-                        <section style="margin-top:20px;">
-                            <div class="col-8 col-offset-2">
-                                <b><span t-field="o.source_bloc_cycle_id" /> - <span
-                                        t-field="o.source_bloc_id.level"
-                                    /> du domaine <span
-                                        t-field="o.source_bloc_domain_id"
-                                    />, section <span
-                                        t-field="o.source_bloc_section_id"
-                                    />, option <span
-                                        t-field="o.source_bloc_track_id"
-                                    />, spécialité <span
-                                        t-field="o.source_bloc_speciality_id"
-                                    />.</b>
-                            </div>
-                        </section>
-                        <section style="margin-top:50px;">
-                            <div class="col-10 col-offset-1">
-                                La présente attestation est délivrée pour renseignements administratifs.
-                            </div>
-                        </section>
-                        <section style="margin-top:80px;">
-                            <div class="col-4 col-offset-7">
-                                LIEGE, le <span
-                                    t-esc="datetime.datetime.now().strftime('%d-%m-%Y')"
-                                />
-                            </div>
-                        </section>
-                        <section style="margin-top:80px;">
-                            <div class="col-4 col-offset-7">
-                                Le Directeur,<br />
-                                Nathanaël HARCQ
-                            </div>
-                        </section>
+                                    >e</t> aux cours du jour de l'Enseignement Supérieur Artistique de type
+                                  <span><t
+                                            t-esc="o.source_bloc_id.cycle_id.type.lower()"
+                                        /></span> pour l'année <span
+                                        t-field="o.year_id"
+                                    />.
+                                  <p style="margin-top:10px;">
+                                      Les cours sont donnés du 14 septembre au 30 juin.
+                                  </p>
+                              </div>
+                          </section>
+                          <section style="margin-top:20px;">
+                              <div class="col-10 col-offset-1">
+                                  <u>Cours suivis dans la nouvelle structure:</u>
+                              </div>
+                          </section>
+                          <section style="margin-top:20px;">
+                              <div class="col-8 col-offset-2">
+                                  <b><span t-field="o.source_bloc_cycle_id" /> - <span
+                                            t-field="o.source_bloc_id.level"
+                                        /> du domaine <span
+                                            t-field="o.source_bloc_domain_id"
+                                        />, section <span
+                                            t-field="o.source_bloc_section_id"
+                                        />, option <span
+                                            t-field="o.source_bloc_track_id"
+                                        />, spécialité <span
+                                            t-field="o.source_bloc_speciality_id"
+                                        />.</b>
+                              </div>
+                          </section>
+                          <section style="margin-top:50px;">
+                              <div class="col-10 col-offset-1">
+                                  La présente attestation est délivrée pour renseignements administratifs.
+                              </div>
+                          </section>
+                          <section style="margin-top:80px;">
+                              <div class="col-4 col-offset-7">
+                                  LIEGE, le <span
+                                        t-esc="datetime.datetime.now().strftime('%d-%m-%Y')"
+                                    />
+                              </div>
+                          </section>
+                          <section style="margin-top:80px;">
+                              <div class="col-4 col-offset-7">
+                                  Le Directeur,<br />
+                                  Nathanaël HARCQ
+                              </div>
+                          </section>
+                        </div>
                     </div>
                 </t>
             </t>
