--- a/school_management/report/report_program.xml
+++ b/school_management/report/report_program.xml
@@ -512,7 +512,7 @@
                         <hr />
                         <div style="font-size:20px;">
                           <section
-                                class="col-12"
+                                class="col-12 text-center"
                                 style="margin-top:180px;"
                             >
                                 Je soussigné, Nathanaël HARCQ, Directeur du CONSERVATOIRE ROYAL DE LIEGE certifie par la présente que
