--- a/school_evaluations/report/report_evaluation.xml
+++ b/school_evaluations/report/report_evaluation.xml
@@ -79,7 +79,7 @@
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.external_layout">
                   <div class="page">
-                    <div class="container" style="padding-right:50px;padding-left:50px;">
+                    <div class="container" style="padding-right:70px;padding-left:70px;">
                         <div class="row" style="margin-bottom:30px;">
                             <div class="col-12 text-center">
                                 <h3>ATTESTATION DE RÉUSSITE</h3>
@@ -100,7 +100,7 @@
                                         /></div>
                           </t>
                           <div class="row" style="margin-top:200px;">
-                              <div class="col-12">
+                              <div class="col-12 text-center">
                                   Je soussigné, NATHANAËL HARCQ, Directeur du Conservatoire Royal de Liège, certifie que
                               </div>
                           </div>
@@ -225,7 +225,7 @@
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.external_layout">
                 <div class="page">
-                    <div class="container" style="padding-right:50px;padding-left:50px;">
+                    <div class="container" style="padding-right:70px;padding-left:70px;">
                         <div class="row" style="margin-bottom:30px;">
                             <div class="col-12 text-center">
                                 <h3>ATTESTATION DE RÉUSSITE DE CYCLE</h3>
@@ -246,7 +246,7 @@
                                         /></div>
                           </t>
                           <div class="row" style="margin-top:200px;">
-                              <div class="col-12">
+                              <div class="col-12 text-center">
                                   Je soussigné, NATHANAËL HARCQ, Directeur du Conservatoire Royal de Liège, certifie que
                               </div>
                           </div>
